src/test/ui/feature-gates/feature-gate-ffi_returns_twice.rs
#![crate_type = "lib"]

extern "C" {
    #[ffi_returns_twice] //~ ERROR the `#[ffi_returns_twice]` attribute is an experimental feature
    pub fn foo();
}
